[package]
name = "game-mlxrs"
version = "0.1.0"
edition = "2024"

[dependencies]
mlx-rs = { path = "../mlx-rs/mlx-rs", features = ["accelerate", "metal"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
walkdir = "2"
symphonia = { version = "0.5.5", features = ["mp3", "aac", "flac", "ogg", "wav", "pcm", "isomp4"] }
rubato = "2.0.0"
hound = "3.5.1"
midly = "0.5.3"
